@@ -153,6 +153,7 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_sbindir}/phobos_tape_library_test
 %{_sbindir}/phobos_tape_library_test.bash
 %{_sbindir}/phobos_tape_library_mtx_test.bash
+%{_sbindir}/tlc
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
 %dir %{phobosdocdir}
