@@ -2,4 +2,4 @@ AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication module-loader ldm dss cfg \
         ldm-modules io io-modules layout serializer store admin lrs \
-        layout-modules cli
+        layout-modules cli tlc
