@@ -1,0 +1,74 @@
+/* -*- mode: c; c-basic-offset: 4; indent-tabs-mode: nil; -*-
+ * vim:expandtab:shiftwidth=4:tabstop=4:
+ */
+/*
+ *  All rights reserved (c) 2014-2023 CEA/DAM.
+ *
+ *  This file is part of Phobos.
+ *
+ *  Phobos is free software: you can redistribute it and/or modify it under
+ *  the terms of the GNU Lesser General Public License as published by
+ *  the Free Software Foundation, either version 2.1 of the License, or
+ *  (at your option) any later version.
+ *
+ *  Phobos is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Lesser General Public License for more details.
+ *
+ *  You should have received a copy of the GNU Lesser General Public License
+ *  along with Phobos. If not, see <http://www.gnu.org/licenses/>.
+ */
+/**
+ * \brief  TLC main interface -- Tape Library Controller
+ */
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <signal.h>
+#include <stdbool.h>
+#include <stdlib.h>
+#include <unistd.h>
+
+#include "pho_common.h"
+
+bool running = true;
+
+static bool should_tlc_stop(void)
+{
+    return !running;
+}
+
+static void sa_sigterm(int signum)
+{
+    running = false;
+}
+
+int main(int argc, char **argv)
+{
+    struct sigaction sa;
+    int rc;
+
+    rc = pho_context_init();
+    if (rc)
+        return -rc;
+
+    atexit(pho_context_fini);
+
+    /* signal handler */
+    sa.sa_handler = sa_sigterm;
+    sa.sa_flags = 0;
+    sigemptyset(&sa.sa_mask);
+    sigaction(SIGTERM, &sa, NULL);
+    sigaction(SIGINT, &sa, NULL);
+
+    while (true) {
+        if (should_tlc_stop())
+            break;
+
+        usleep(10000);
+    }
+
+    return EXIT_SUCCESS;
+}
