@@ -1,0 +1,43 @@
+#!/bin/bash
+# -*- mode: c; c-basic-offset: 4; indent-tabs-mode: nil; -*-
+# vim:expandtab:shiftwidth=4:tabstop=4:
+
+#
+#  All rights reserved (c) 2014-2023 CEA/DAM.
+#
+#  This file is part of Phobos.
+#
+#  Phobos is free software: you can redistribute it and/or modify it under
+#  the terms of the GNU Lesser General Public License as published by
+#  the Free Software Foundation, either version 2.1 of the License, or
+#  (at your option) any later version.
+#
+#  Phobos is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU Lesser General Public License for more details.
+#
+#  You should have received a copy of the GNU Lesser General Public License
+#  along with Phobos. If not, see <http://www.gnu.org/licenses/>.
+#
+
+# set python and phobos environment
+test_dir=$(dirname $(readlink -e $0))
+. $test_dir/test_env.sh
+
+function tlc_sig
+{
+    local signal_name="$1"
+
+    $tlc &
+    TLC_PID="$!"
+    sleep 1
+    kill -s ${signal_name} $TLC_PID
+    sleep 1
+    if kill -0 $TLC_PID > /dev/null 2>&1 ; then
+        kill -s SIGKILL $TLC_PID
+        error "${signal_name} should have ended TLC"
+    fi
+}
+
+TESTS=("tlc_sig SIGINT" "tlc_sig SIGTERM")
